--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
   <script>
     // 初始化 Firebase 設定
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyCt9Zi9V_j2C5Xwz4qSC_Kc9XXa1e_VhH4",
+      authDomain: "stamp-card-5f9dd.firebaseapp.com",
+      projectId: "stamp-card-5f9dd",
+      storageBucket: "stamp-card-5f9dd.firebasestorage.app",
+      messagingSenderId: "920207796171",
+      appId: "1:920207796171:web:4a64fbd90bdb801a56784e",
+      measurementId: "G-D9MY0KVFZL"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
